# Minisheet

./: .gitignore  README.md
.claude/: settings.local.json
backend/: CMakeLists.txt
backend/app/: minisheet_cli.cpp  minisheet_server.cpp  oj_cli.cpp  oj_cli.h
backend/build-gcc/: CMakeCache.txt  Makefile  cmake_install.cmake  minisheet_cli  minisheet_formula_non_recursive_test  minisheet_server  minisheet_storage_roundtrip_test
backend/build-gcc/backend/build-gcc/storage-roundtrip-test/: input.csv
backend/include/minisheet/: m1_types.h  m2_workbook.h  m3_display.h  m4_formula.h  m5_recalc.h  m6_storage.h  m7_api.h
backend/src/: m1_types.cpp  m2_workbook.cpp  m3_display.cpp  m4_formula.cpp  m5_recalc.cpp  m6_storage.cpp  m7_api.cpp
backend/tests/: core_tests.cpp  error_messages_test.cpp  storage_compression_test.cpp  storage_roundtrip.cpp
docs/plans/: 2026-03-11-electron-icon-design.md  2026-03-11-electron-icon.md  2026-03-12-cli-pack-unpack.md  2026-03-13-electron-packaging-design.md  2026-03-13-electron-packaging.md  2026-03-18-app-shell-refactor-design.md  2026-03-18-app-shell-refactor.md
electron/: forge.config.js  main.js  package-lock.json  package.json  preload.js
electron/scripts/: app-menu.cjs  app-menu.test.cjs  build-backend-win.test.cjs  build-backend.cjs  build-renderer.cjs  electron-zip-cache.cjs  electron-zip-cache.test.cjs  forge-makers.test.cjs  generate-icons.cjs  generate-icons.test.cjs  icon-assets.cjs  icon-assets.test.cjs  package-env.cjs  package-env.test.cjs  prepare-make.cjs  run-forge-make.cjs  target-config.cjs  target-config.test.cjs  windows-runtime.cjs  windows-runtime.test.cjs
examples/: basic-demo.csv  benchmark-case-1.csv  benchmark-case-2.csv  benchmark-case-3.csv  error-demo.csv
frontend/: package-lock.json  package.json  tsconfig.json
frontend/public/: index.html
frontend/src/: App.css  App.test.tsx  App.tsx  desktop.d.ts  index.css  index.tsx
frontend/src/app/: workbookApi.ts  workbookUtils.ts
frontend/src/components/: AppHeader.tsx  FormulaBar.tsx  HelpModal.tsx  InsightPanel.tsx  StatusBar.tsx  WorkbookToolbar.tsx
frontend/src/components/ui/: Badge.tsx
frontend/src/hooks/: useWorkbookController.ts  useWorkbookShortcuts.ts
frontend/src/lib/: desktopRuntime.ts  portal.test.ts  portal.ts
frontend/src/spreadsheet/: GreenGlideGrid.test.tsx  GreenGlideGrid.tsx  adapter.test.ts  adapter.ts  green-glide.css
scripts/: run_example_benchmark.sh  start_demo.sh  test_server_api.sh
